syntax="proto3";

option go_package="./GrpcNewsFeedService";

message GetNewsFeedRequest {
    int32 UserId=1;
    int32 Offset=2;
    int32 Limit=3;
}

message GetNewsFeedResponse {
    repeated int32 BlogId=1;
}

service NewsFeedService {
    rpc GetNewsFeed(GetNewsFeedRequest) returns (GetNewsFeedResponse);
}